# multivm-node

./: .gitignore  Dockerfile  Makefile  README.md  flake.nix
example_contracts/: Cargo.toml  rust-toolchain.toml
example_contracts/amm/: Cargo.toml
example_contracts/amm/src/: main.rs
example_contracts/counter/: Cargo.toml
example_contracts/counter/src/: main.rs
example_contracts/demo_ccc/: Cargo.toml
example_contracts/demo_ccc/src/: main.rs
example_contracts/fibonacci/: Cargo.toml
example_contracts/fibonacci/src/: main.rs
example_contracts/playground/: Cargo.toml
example_contracts/playground/src/: main.rs
example_contracts/solana_amm/: Cargo.toml
example_contracts/solana_amm/src/: instruction.rs  main.rs
example_contracts/token/: Cargo.toml
example_contracts/token/src/: main.rs
multivm_core/: Cargo.toml
multivm_core/client/: .env  .gitignore  hardhat.config.js  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
multivm_core/client/contracts/: AMM.sol  Token.sol  WMVM.sol
multivm_core/client/scripts/: create-users.ts  deploy-amm-rust.ts  deploy-amm-solana.ts  deploy-demo.ts  deploy-token.ts  deploy-wrapped.ts  deploy.js  helpers.ts  logs.ts  utils.ts
multivm_core/client/test/: Token.js  Token.test.ts
multivm_core/client/utils/: SafeTransferLib.sol
multivm_core/meta_contracts/: Cargo.toml
multivm_core/meta_contracts/evm/: Cargo.toml
multivm_core/meta_contracts/evm/src/: main.rs  memory_backend.rs
multivm_core/meta_contracts/root/: Cargo.toml
multivm_core/meta_contracts/root/src/: main.rs  system_env.rs
multivm_core/meta_contracts/system/: Cargo.toml
multivm_core/meta_contracts/system/src/: evm.rs  main.rs  system_env.rs
multivm_core/playgrounds/: Cargo.toml
multivm_core/playgrounds/src/: lib.rs
multivm_core/primitives/: Cargo.toml
multivm_core/primitives/src/: lib.rs  syscalls.rs
multivm_core/rpc/: Cargo.toml
multivm_core/rpc/src/: main.rs  server.rs  utils.rs
multivm_core/runtime/: Cargo.toml
multivm_core/runtime/src/: account.rs  block.rs  bootstraper.rs  context.rs  executor.rs  lib.rs  outcome.rs  utils.rs  viewer.rs
multivm_core/server/: .env  Cargo.toml
multivm_core/server/.sqlx/: query-055d087948aa472caf7ce115e963b9f4b75d513522c1945eab7c9cdc6b0cbb35.json  query-12898f4604feb544b5e49bcf1f925fb21db38a580f3c45c7b21bccdec6744c6e.json  query-37a764f2acca933483102059acaf7a2f1a739c7cb24c7796c36228f1612e2866.json  query-4941d8e93c0f526d1efaffc5c3ab618a291b323fae1a8f2d95ea352271c0d705.json  query-4e4eda36b5f8c5f4c11b285fecccdb2638d310f88d9828a0d73273680ca81377.json  query-4f0edf52a152fb12f9894ba0a9c7f2df4e86d1f8df79474542a09298c4146181.json  query-5885c934f584acf81a9de97413ea83e897916d2b67410616e3168e624507182b.json  query-58be43c59d3c1536c6a36e1a5574183bcbd45f5253b50800922e2327d1e89983.json  query-5cef412c347799959ddfae0186fa5d909bab16ced26fa02b4aa667dd30a301fb.json  query-652457247e531b1cf5b0f627c9b2658d3e2148bb996406d0afb0dc041b5edb8e.json  query-6cf1cc2574032cfb7ce840fb107ea37ef965dd2b46ef6103b92195b6c6a0fc8c.json  query-6e3138acdb44cd232995f992ce1eacc92f84f7ee5a6541db9e185d9ea49fa7e0.json  query-7228714da9cc3f470c08b5f5af7ff2253cda0d8e8cc59e075ddc4e18ecf15a35.json  query-72970c03b35557753411f03cf3b72f3b3a0710baf4d265d75838a8e8f8b829ed.json  query-785addcb417d49de6b6ea70450e9bdc84046afce2594632bffb0fdd796600ecc.json  query-811e20e07c01670a34fc18df094ce1440a37b145a585c94b6d85b33e49b98b93.json  query-8b1ce13cb29d49b1e808f5fb75258fede60ba9f584184be098a03a37bae12638.json  query-92533c96638fa195a93657b8f365a5be66eaba9011742fb24a52c5474a1e0215.json  query-a08ca090eb1c46bef5450f884273cc65607c78a54be5e8ddc1b2028f49a8a2a7.json  query-a9fe1b265e4ba8812ca4719c2690a5982d9abb2819603e2256c5ab593f845ca3.json  query-b22bef3b8cde7ab5701dcec07b1304eaae8ac8bf7ab5d9870a55ea14892f67fe.json  query-b3dd1052e1f4c05a90d4348df2691971913adddafe222f37767fce406b889e54.json  query-bbc692a7868ebf69da74d2d2136c3fe7d043420ef172c45b0aaf18d04814128c.json  query-c6fa4f53396f40d6f94fbecb22e62656166a623ada169a169a1a3ee5998e2b20.json  query-cb346d1eee6d7aa1f276b89a55cd3b3d69f5700115186c6aa49490859b740193.json  query-d46ba3a6e07b8801e29e05600bb2e83ccc492ff18cab2fa97390ae73eec5bfc3.json  query-e5a5f1cf652634f4c3281bea717553de5c5fc07d825df68788ebb82fdca008ae.json
multivm_core/server/migrations/: 20240123100103_init.sql
multivm_core/server/src/: helper.rs  main.rs
multivm_core/server/src/explorer/: config.rs  graphql.rs  indexer.rs  mod.rs
multivm_core/server/src/explorer/storage/: mod.rs
multivm_core/server/src/explorer/storage/models/: accounts.rs  blocks.rs  events.rs  mod.rs  receipts.rs  stats.rs  transactions.rs
multivm_core/server/src/explorer/storage/queries/: mod.rs
multivm_core/server/src/explorer/storage/queries/accounts/: mod.rs
multivm_core/server/src/explorer/storage/queries/blocks/: mod.rs
multivm_core/server/src/explorer/storage/queries/events/: mod.rs
multivm_core/server/src/explorer/storage/queries/receipts/: mod.rs
multivm_core/server/src/explorer/storage/queries/stats/: mod.rs
multivm_core/server/src/explorer/storage/queries/transactions/: mod.rs
multivm_core/server/src/rpc/: mod.rs  utils.rs
multivm_sdk/: Cargo.toml
multivm_sdk/macros/: Cargo.toml
multivm_sdk/macros/src/: lib.rs
multivm_sdk/sdk/: Cargo.toml
multivm_sdk/sdk/src/: env.rs  lib.rs
multivm_sdk/solana_program/: Cargo.toml
multivm_sdk/solana_program/src/: lib.rs
patched-deps/curve25519-dalek/: Cargo.toml
patched-deps/libsecp256k1/: Cargo.toml
patched-deps/tiny-bip39/: Cargo.toml
