[workspace]
members = [
    "primitives",
    "runtime",
    "meta_contracts",
    "playgrounds",
    "server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
borsh = { version = "1.0.0-alpha.6", features = ["derive"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3