[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.19.0", default-features = false, features = [ "std" ] }
multivm_sdk = { path = "../../multivm_sdk/sdk" }
multivm_sdk_macros = { path = "../../multivm_sdk/macros" }
borsh = { version = "1.0.0-alpha.6", features = ["derive"] }
eth-primitive-types = { package = "primitive-types", version = "0.12.1" }
num = "0.4.1"
ethabi = "18.0.0"
hex = "0.4.3"
