[package]
name = "solana_amm"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.19.0", default-features = false, features = [ "std" ] }
solana_program = { path = "../../multivm_sdk/solana_program", package = "multivm_solana_program" }
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0"
arrayref = "0.3.6"
rust_decimal = "1.16"
borsh = { version = "1.0.0-alpha.6", features = ["derive"] }
ethabi = "18.0.0"
num = "0.4.1"

[patch.crates-io.curve25519-dalek]
path = "../../patched-deps/curve25519-dalek"

[patch.crates-io.libsecp256k1]
path = "../../patched-deps/libsecp256k1"

[patch.crates-io.tiny-bip39]
path = "../../patched-deps/tiny-bip39"
