[package]
name = "multivm_primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh.workspace = true
risc0-zkvm-platform = { version = "0.19.0" }
risc0-zkvm = { version = "0.19.0", default-features = false, features = ["std"] }
serde = { version = "1.0.171", features = ["derive"] }
eth-primitive-types = { package = "primitive-types", version = "0.12.1" }
sha2 = "0.10"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
ethers-core = "2.0.10"
bs58 = "0.5.0"