[package]
name = "multivm_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
multivm_runtime = { path = "../runtime" }
multivm_primitives = { path = "../primitives" }
playgrounds = { path = "../playgrounds" }

anyhow.workspace = true
borsh.workspace = true

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
jsonrpsee = { version = "0.19.0", features = ["full"] }
hex = "0.4.3"
ethabi = "18.0.0"
eth-primitive-types = { package = "primitive-types", version = "0.12.1" }
ethers = "2.0.10"
ethers-core = "2.0.10"
lazy_static = "1.4.0"
