[package]
name = "multivm_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
skip-proving = []

[dependencies]
multivm_primitives = { path = "../primitives" }
meta_contracts = { path = "../meta_contracts" }

anyhow.workspace = true
borsh.workspace = true

risc0-zkvm = { version = "0.18.0", features = ["cuda"] }

serde = { version = "1.0.171", features = ["derive"] }
tracing = "0.1.36"
eth-primitive-types = { package = "primitive-types", version = "0.12.1" }
hex = "0.4.3"
sled = "0.34.7"
