[package]
name = "multivm_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multivm_sdk_macros = { path = "../macros" }
borsh = { version = "1.0.0-alpha.6", features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }
risc0-zkvm = { version = "0.19.0", default-features = false, features = ["std"] }
multivm_primitives = { path = "../../multivm_core/primitives" }
once_cell = "1.18.0"
eth-primitive-types = { package = "primitive-types", version = "0.12.1" }

ethabi = "18.0.0"
