[package]
name = "multivm_solana_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { version = "0.19.0", default-features = false, features = [ "std" ] }
solana-program = "1.17.4"
multivm_primitives = { path = "../../multivm_core/primitives" }
multivm_sdk = { path = "../sdk" }

borsh = { version = "1.0.0-alpha.6", features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }
once_cell = "1.18.0"
bs58 = "0.5.0"

