[package]
name = "root_metacontract"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
multivm_primitives = { path = "../../../multivm_core/primitives" }
risc0-zkvm = { version = "0.18.0", default-features = false, features = [ "std" ] }
borsh = { version = "1.0.0-alpha.6", features = ["derive"] }
primitive-types = "0.12.1"
bincode = "1.3.3"
once_cell = "1.18.0"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }


[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }